Added an about navigation tab in count webpage

--- a/Template/count.html
+++ b/Template/count.html
@@ -11,6 +11,9 @@
             <nav>
                 <a href="{% url 'home' %}">Home</a>
             </nav>
+            <nav>
+                <a href="{% url 'about' %}">About</a>
+            </nav>
             <h2>Your Text</h2>
         </header>
         <main>
