--- a/Template/about.html
+++ b/Template/about.html
@@ -15,7 +15,7 @@
         <p>This is a really cool website taught by Nick Walter</p>
     </main>
     <footer>
-
+        <b>Copyright 2020</b>
     </footer>
 
 </body>
